--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ base {
 }
 
 repositories {
-
+	maven { url = "https://jitpack.io" }
 }
 
 dependencies {
@@ -20,7 +20,7 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:0.2.2")))
-
+	include(implementation(annotationProcessor("com.github.bawnorton.mixinsquared:mixinsquared-fabric:0.1.1")))
 }
 
 processResources {
